Fix background to make content more visible at a glance

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -5,7 +5,7 @@ body::after {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  opacity: 0.4;
+  opacity: 0.1;
   top: 0;
   left: 0;
   bottom: 0;
@@ -76,9 +76,9 @@ header {
     padding-right: 20px;
   }
   .jumbotron {
-    opacity: 0.7;
+    opacity: 0.8;
     color: white;
-    background-color: #000;
+    background: black;
     margin-left: 250px;
     
   }
